Fix alignment of homepage

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -93,7 +93,11 @@ footer p {
 }
 /* Homepage */
 
-
+.index img {
+	float: left;
+	margin: 10px;
+	width:80%;
+}
 
 /* Blog Index */
 
